fix(cursor): on Firefox and optimize animation

--- a/src/app/doc/editor/editor.component.scss
+++ b/src/app/doc/editor/editor.component.scss
@@ -16,3 +16,7 @@ md-card {
   height: 20px;
   flex: 0 0 auto;
 }
+
+.marked {
+  background-color: lightseagreen;
+}
